Turned desktop design into flex design, shape looks good working on fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ main {
   margin-top: 0.5em;
 }
 
-.flex-container {
+.img-container {
   display: flex;
   justify-content: flex-end;
 }
@@ -105,4 +105,11 @@ main {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media (min-width: 1024px) {
+  .flex {
+    display: flex;
+    align-items: center;
+  }
 }
